--- a/app/views/brokers/_index.html.erb
+++ b/app/views/brokers/_index.html.erb
@@ -1,6 +1,7 @@
   <!--Regular Datatables CSS-->
 	 <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet">
 	 <!--Responsive Extension Datatables CSS-->
+     <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css" rel="stylesheet">
 	 
 	  <style>
 		/*Overrides for Tailwind CSS */
