--- a/app/views/brokers/_index.html.erb
+++ b/app/views/brokers/_index.html.erb
@@ -197,7 +197,7 @@
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
@@ -237,7 +237,7 @@
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
@@ -278,7 +278,7 @@
                                 <%= f.hidden_field :stock_id, :value => stock.symbol %>
                                 <%= f.hidden_field :companyname, :value => stock.company_name %>
                                 <%= f.hidden_field :price, :value => stock.latest_price %>
-                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
+                                <td><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
                                 <% end %>
                         <% end %>
                     </tr>    
