--- a/app/views/brokers/_unapproved.html.erb
+++ b/app/views/brokers/_unapproved.html.erb
@@ -88,14 +88,14 @@
           </li>
           <li class="my-px">
             <!--href links are admins but account type is broker(approved) -->
-            <a href="app/views/admins/_index.html.erb" class="flex flex-row items-center h-10 px-3 rounded-lg text-gray-700 bg-gray-100">
+            <div class="flex flex-row items-center h-10 px-3 rounded-lg text-gray-700 bg-gray-100">
               <span class="flex items-center justify-center text-lg text-gray-400">
                 <svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
                   <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
                 </svg>
               </span>
-              <span class="ml-3">Dashboard</span>
-            </a>
+              <span class="ml-3"><%= link_to 'Dashboard', root_path %></span>
+            </div>
           </li>
           <li class="my-px">
             <div class="flex flex-row items-center h-10 px-3 rounded-lg text-gray-300 hover:bg-gray-100 hover:text-gray-700">
