--- a/app/views/brokers/edit.html.erb
+++ b/app/views/brokers/edit.html.erb
@@ -26,6 +26,11 @@
         <%= f.text_field :balance, class:"text-md appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" ,placeholder: "Balance" %>
       </div>
 
+      <div class="mb-6 mt-6">
+        <label for="description" class="mr-6 font-bold text-white"><%= f.label :transact_fee %></label>
+        <%= f.text_field :transact_fee, class:"text-md appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" ,placeholder: "% Transaction fee" %>
+      </div>
+
       <div class="flex w-full mt-8">
          <%= f.submit :Update, class: "px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-yellow-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
       </div>
