enabled showing of transactions in buyer and broker accounts

--- a/app/views/brokers/_unapproved.html.erb
+++ b/app/views/brokers/_unapproved.html.erb
@@ -108,14 +108,18 @@
             </div>
           </li>
           <li class="my-px">
-            <a href="#" class="flex flex-row items-center h-10 px-3 rounded-lg text-gray-300 hover:bg-gray-100 hover:text-gray-700">
+            <div class="flex flex-row items-center h-10 px-3 rounded-lg text-gray-300 hover:bg-gray-100 hover:text-gray-700">
               <span class="flex items-center justify-center text-lg text-gray-400">
                 <svg fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
                   <path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/>
                 </svg>
               </span>
-              <span class="ml-3">Transactions</span>
-            </a>
+              <% if current_user.type == 'Broker' %>
+                <span class="ml-3"><%= link_to "Transactions", broker_transact_path(current_user) %></span>
+              <% elsif current_user.type == 'Buyer' %>
+                <span class="ml-3"><%= link_to "Transactions", buyer_transact_path(current_user) %></span>
+              <% end %>
+            </div>
           </li>
           </ul>
         </div>
