--- a/app/views/buyers/show.html.erb
+++ b/app/views/buyers/show.html.erb
@@ -107,7 +107,11 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                   <path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"/>
                 </svg>
               </span>
-              <span class="ml-3"><%= link_to "Transactions", transact_path(current_user) %></span>
+              <% if current_user.type == 'Broker' %>
+                <span class="ml-3"><%= link_to "Transactions", broker_transact_path(current_user) %></span>
+              <% elsif current_user.type == 'Buyer' %>
+                <span class="ml-3"><%= link_to "Transactions", buyer_transact_path(current_user) %></span>
+              <% end %>
             </div>
           </li>
           </ul>
