--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,8 +35,8 @@
             <%= f.submit "Update",class: "px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-yellow-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
         </div>
     <% end %>
-    <%= link_to "Delete Account", registration_path(resource_name),class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-red-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 mb-6", data: { confirm: "Are you sure?" }, method: :delete %>
-    <%= link_to "Back", 'javascript:history.go(-1);',class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-gray-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
+        <%= button_to "Delete Account", registration_path(resource_name),class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-red-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 mb-6", data: { confirm: "Are you sure?" }, method: :delete %>
+        <%= link_to "Back", 'javascript:history.go(-1);',class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-gray-500 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
 
   </div>
 
