--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,17 +38,17 @@
                   <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full px-4 py-2 mt-2 text-base text-black transition duration-500 ease-in-out transform border-transparent rounded-lg bg-blueGray-100 focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 ext-black focus:border-blueGray-500", placeholder:"Confirm Password"  %>
                 </div>
               </div>
-              <%= f.submit "Sign up",class:"block w-full px-4 py-3 mt-6 font-semibold text-black transition duration-500 ease-in-out transform rounded-lg bg-indigo-500 hover:from-black to-black focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 hover:to-black" %>
+              <%= f.submit "Sign up",class:"block w-full px-4 py-3 mt-6 font-semibold text-black transition duration-500 ease-in-out transform rounded-lg bg-indigo-500 hover:from-black to-black focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2 hover:to-black mb-6" %>
             </form>
             <% end %>
-            <p class="mt-8 text-center text-white">Already have an account? <a href="#" class="font-semibold text-white hover:text-white">Sign In</a></p>
+            <%= link_to "Back", :back, class: "mt-3 px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap bg-gray-900 border border-transparent rounded-md shadow-sm hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2" %>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-        
+       
 
 <%= link_to 'New Buyer Sign Up', new_buyer_registration_path %><br/>
 <%= link_to 'New Broker Sign Up', new_broker_registration_path %><br/>
