--- a/app/views/buyers/_index.html.erb
+++ b/app/views/buyers/_index.html.erb
@@ -171,9 +171,10 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                         <%= broker_stock. companyname %></td>
                         <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                         <%= broker_stock.price %></td>
+                        <td class="w-full lg:w-auto p-1 text-gray-800 text-center border border-b block lg:table-cell relative lg:static">
                         <% if BuyerStock.all.where(user_id: current_user.id, stock_id: broker_stock.stock_id).count > 0 %>
                             <% id = BuyerStock.find_by(user_id: current_user.id, stock_id: broker_stock.stock_id) %>
-                            <td><%= button_to 'Remove', buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-gray-900 px-1 w-36 cursor-pointer text-center' %></td>
+                            <%= button_to 'Remove', buyer_stock_path(broker_stock.stock_id), method: :delete, data: { confirm: 'Are you sure?' }, class: "w-16 rounded text-xs text-center text-red-400 ring ring-red-400 p-1 cursor-pointer" %>
                         <% else %>
                             <%= form_with model: BuyerStock.new, local: true do |f| %>
                                 <%= f.hidden_field :broker_id, :value => broker_stock.user_id %>
@@ -181,9 +182,10 @@ table.dataTable.dtr-inline.collapsed>tbody>tr>td:first-child:before, table.dataT
                                 <%= f.hidden_field :stock_id, :value => broker_stock.stock_id %>
                                 <%= f.hidden_field :companyname, :value => broker_stock.companyname %>
                                 <%= f.hidden_field :price, :value => broker_stock.price %>
-                                <td><%= f.number_field :quantity, class: 'text-gray-900 pl-4 w-32', placeholder: 'Qty' %><%= f.submit 'Add to Portolio', class: 'text-gray-900 px-1 w-36 cursor-pointer' %></td>
-                                <% end %>
-                        <% end %>
+                                <%= f.number_field :quantity, class: 'bg-blue-100 text-black pl-4 w-32', placeholder: 'Quantity' %>
+                                <%= f.submit 'Add to Portolio', class:"w-24 rounded text-xs text-center text-green-400 ring ring-green-400 p-1 cursor-pointer ml-2"%>
+                            <% end %>
+                        <% end %></td>
                     </tr>    
                     <% end %>
                 </tbody>
